--- a/package.json
+++ b/package.json
@@ -5,19 +5,26 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index ",
-    "test": "jest --testEnviroment=node --runInBand ./tests"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "jest": "^26.6.3",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "supertest": "^6.1.3"
   },
   "dependencies": {
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "mongodb-memory-server": "^6.9.6",
     "mongoose": "^5.12.11"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
