--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "express": "^4.17.1",
+    "express-validator": "^6.11.1",
     "mongodb-memory-server": "^6.9.6",
     "mongoose": "^5.12.11"
   },
