--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index ",
-    "test": "jest"
+    "test": "set NODE_ENV=development&& jest"
   },
   "keywords": [],
   "author": "",
@@ -17,8 +17,11 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "bcryptjs": "^2.4.3",
+    "config": "^3.3.6",
     "express": "^4.17.1",
     "express-validator": "^6.11.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb-memory-server": "^6.9.6",
     "mongoose": "^5.12.11"
   },
